--- a/spec/vcr_cassettes/pull_request_annotation_updates_comment.yml
+++ b/spec/vcr_cassettes/pull_request_annotation_updates_comment.yml
@@ -11,7 +11,7 @@ http_interactions:
         a non GitHub-verified email address in this Pull Request. Chef will have to
         verify by hand that they have signed a Chef CLA.\n\nThe following GitHub users
         do not appear to have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the
-        CLA here.](https://community.getchef.com)"}'
+        CLA here.](https://community.chef.io)"}'
     headers:
       Accept:
       - application/vnd.github.v3+json
@@ -83,7 +83,7 @@ http_interactions:
         are 1 commit author(s) whose commits are authored by a non GitHub-verified
         email address in this Pull Request. Chef will have to verify by hand that
         they have signed a Chef CLA.\n\nThe following GitHub users do not appear to
-        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.getchef.com)"}'
+        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.chef.io)"}'
     http_version: 
   recorded_at: Thu, 24 Jul 2014 20:13:42 GMT
 - request:
@@ -96,13 +96,13 @@ http_interactions:
         to Chef Software, Inc. projects or are using a non-GitHub verified email address.
         To become authorized to contribute, you will need to sign the Contributor
         License Agreement (CLA) as an individual or on behalf of your company. [You
-        can read more on Chef''s blog.](http://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
+        can read more on Chef''s blog.](http://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
         Non-GitHub Verified Committers\\n\\n\n\nThere are 1 commit author(s) whose
         commits are authored by a non GitHub-verified email address. Chef will have
         to manually verify that they are authorized to contribute.\n\n## GitHub Users
         Who Are Not Authorized To Contribute\\n\\n\n\nThe following GitHub users do
         not appear to have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA
-        here.](https://community.getchef.com)"}'
+        here.](https://community.chef.io)"}'
     headers:
       Accept:
       - application/vnd.github.v3+json
@@ -174,13 +174,13 @@ http_interactions:
         Inc. projects or are using a non-GitHub verified email address. To become
         authorized to contribute, you will need to sign the Contributor License Agreement
         (CLA) as an individual or on behalf of your company. [You can read more on
-        Chef''s blog.](http://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
+        Chef''s blog.](http://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
         Non-GitHub Verified Committers\\n\\n\n\nThere are 1 commit author(s) whose
         commits are authored by a non GitHub-verified email address. Chef will have
         to manually verify that they are authorized to contribute.\n\n## GitHub Users
         Who Are Not Authorized To Contribute\\n\\n\n\nThe following GitHub users do
         not appear to have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA
-        here.](https://community.getchef.com)"}'
+        here.](https://community.chef.io)"}'
     http_version: 
   recorded_at: Tue, 19 Aug 2014 13:36:29 GMT
 - request:
@@ -261,12 +261,12 @@ http_interactions:
         Inc. projects or are using a non-GitHub verified email address. To become
         authorized to contribute, you will need to sign the Contributor License Agreement
         (CLA) as an individual or on behalf of your company. [You can read more on
-        Chef''s blog.](http://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
+        Chef''s blog.](http://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
         Non-GitHub Verified Committers\n\nThere are 1 commit author(s) whose commits
         are authored by a non-GitHub verified email address. Chef will have to manually
         verify that they are authorized to contribute.\n\n## GitHub Users Who Are
         Not Authorized To Contribute\n\nThe following GitHub users do not appear to
-        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.getchef.com)"}]'
+        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.chef.io)"}]'
     http_version: 
   recorded_at: Wed, 20 Aug 2014 12:08:18 GMT
 - request:
@@ -356,12 +356,12 @@ http_interactions:
         to Chef Software, Inc. projects or are using a non-GitHub verified email address.
         To become authorized to contribute, you will need to sign the Contributor
         License Agreement (CLA) as an individual or on behalf of your company. [You
-        can read more on Chef''s blog.](http://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
+        can read more on Chef''s blog.](http://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
         Non-GitHub Verified Committers\n\nThere are 1 commit author(s) whose commits
         are authored by a non-GitHub verified email address. Chef will have to manually
         verify that they are authorized to contribute.\n\n## GitHub Users Who Are
         Not Authorized To Contribute\n\nThe following GitHub users do not appear to
-        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.getchef.com)"}'
+        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.chef.io)"}'
     headers:
       Accept:
       - application/vnd.github.v3+json
@@ -433,12 +433,12 @@ http_interactions:
         Inc. projects or are using a non-GitHub verified email address. To become
         authorized to contribute, you will need to sign the Contributor License Agreement
         (CLA) as an individual or on behalf of your company. [You can read more on
-        Chef''s blog.](http://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
+        Chef''s blog.](http://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process/)\n\n##
         Non-GitHub Verified Committers\n\nThere are 1 commit author(s) whose commits
         are authored by a non-GitHub verified email address. Chef will have to manually
         verify that they are authorized to contribute.\n\n## GitHub Users Who Are
         Not Authorized To Contribute\n\nThe following GitHub users do not appear to
-        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.getchef.com)"}'
+        have signed a CLA:\n\n* @brettchalupa\n\n[Please sign the CLA here.](https://community.chef.io)"}'
     http_version: 
   recorded_at: Wed, 20 Aug 2014 12:08:21 GMT
 - request:
